test/files/neg/badtok-1.scala
//> using options -Xlint:deprecation -Werror
//
// bug 989
'42'


// SI-10133
'''

'';

// SI-10120
'abc'

'utf_8'

'utf-8'

'
