test/files/neg/badtok-1.check
badtok-1.scala:4: error: unclosed character literal (or use " not ' for string literal)
'42'
^
badtok-1.scala:4: error: unclosed character literal (or use " not ' for string literal)
'42'
   ^
badtok-1.scala:8: error: empty character literal (use '\'' for single quote)
'''
^
badtok-1.scala:8: error: unclosed character literal (or use " not ' for string literal)
'''
  ^
badtok-1.scala:10: error: empty character literal
'';
^
badtok-1.scala:13: error: unclosed character literal (or use " for string literal "''abc")
'abc'
    ^
badtok-1.scala:15: error: unclosed character literal (or use " for string literal "utf_8")
'utf_8'
      ^
badtok-1.scala:17: error: unclosed character literal (or use " not ' for string literal)
'utf-8'
      ^
badtok-1.scala:19: error: unclosed character literal
'
^
badtok-1.scala:13: error: expected class or object definition
'abc'
^
10 errors
